fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ main {
   main {
     margin: 0;
     border-radius: 0;
+    min-height: 100vh;
   }
 }
 
@@ -43,6 +44,10 @@ footer {
 .starting-page > h1 {
   font-size: 32px;
   font-weight: bold;
+}
+
+.starting-page > p {
+  text-align: center;
 }
 
 .api-link,
@@ -82,6 +87,11 @@ footer {
 .options {
   display: flex;
 }
+@media (max-width: 400px) {
+  .options {
+    flex-direction: column;
+  }
+}
 
 .btn {
   font-size: 16px;
@@ -99,6 +109,12 @@ footer {
   align-items: center;
   margin-right: 20px;
   margin-top: 10px;
+}
+
+@media (max-width: 450px) {
+  .btn-option {
+    margin: 5px;
+  }
 }
 
 .btn-option-chosen {
@@ -124,11 +140,22 @@ footer {
   border: none;
   font-size: 20px;
 }
+@media (max-width: 400px) {
+  .btn-check-answer {
+    width: 90vw;
+  }
+}
 
 .result {
   display: flex;
   align-items: center;
   font-size: 20px;
+}
+@media (max-width: 450px) {
+  .result {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 
 .btn-play-again {
@@ -140,6 +167,12 @@ footer {
   border: none;
   margin-left: 20px;
   font-size: 20px;
+}
+@media (max-width: 400px) {
+  .btn-play-again {
+    margin: auto;
+    width: 90vw;
+  }
 }
 
 .btn-option:hover,
